SPKMASTER-26010: Utvidar out-of-process-køyringa så den ikkje blir påvirka av uønska refleksjonsadvarslar ved køyring på java 9 eller nyare